--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
             <version>4.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.barcode4j</groupId>
+            <artifactId>barcode4j-light</artifactId>
+            <version>2.0</version>
+        </dependency>
+
 
     </dependencies>
 
